util: convert deprecated ctor(String) to valueOf(String) calls.